<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.shoestore.screens.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/navigation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:popUpTo="@id/navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.shoestore.screens.welcome.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/instructionFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:name="com.example.shoestore.screens.instruction.InstructionFragment"
        android:label="@string/instruction"
        tools:layout="@layout/fragment_instruction">
        <action
            android:id="@+id/action_instructionFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:popUpTo="@id/navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.example.shoestore.screens.detail.ShoeDetailFragment"
        android:label="@string/shoe_detail"
        tools:layout="@layout/fragment_shoe_detail">
        <action
            android:id="@+id/action_shoeDetailFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:popUpTo="@id/listFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.shoestore.screens.list.ListFragment"
        android:label="Shoe List"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_listFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment" />
    </fragment>
</navigation>